[gd_scene load_steps=19 format=3 uid="uid://bigfrcthsqmqp"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_b2vu8"]
[ext_resource type="Texture2D" uid="uid://b27iycarrg5t2" path="res://board/sprites/board1.png" id="1_j8wqy"]
[ext_resource type="Texture2D" uid="uid://jofrcpaakt3a" path="res://board/sprites/board2.png" id="2_8nqu4"]
[ext_resource type="Texture2D" uid="uid://cp21cc4l0bi3w" path="res://board/sprites/board3.png" id="3_b25dq"]
[ext_resource type="Texture2D" uid="uid://n72b5agv2obj" path="res://board/sprites/board4.png" id="4_4m60j"]
[ext_resource type="Texture2D" uid="uid://bgv60j8nk6pd0" path="res://board/sprites/board5.png" id="5_7aup1"]
[ext_resource type="Texture2D" uid="uid://ontqs8ca2pbd" path="res://board/sprites/board6.png" id="6_xg8om"]
[ext_resource type="Texture2D" uid="uid://c5e84squw6xk" path="res://resources/buttons/menu/menu_1.png" id="7_ss07b"]
[ext_resource type="Texture2D" uid="uid://buvkfxac3dta3" path="res://resources/buttons/menu/menuPressed_1.png" id="8_4ah6i"]
[ext_resource type="Texture2D" uid="uid://yngloxkydw5r" path="res://resources/buttons/refresh/ref_1.png" id="9_r8id6"]
[ext_resource type="Texture2D" uid="uid://bch38np5abe5a" path="res://resources/buttons/refresh/refPressed_1.png" id="10_e67pu"]
[ext_resource type="Texture2D" uid="uid://dv6xn18i76wd" path="res://resources/buttons/menu/menu_2.png" id="11_tytk6"]
[ext_resource type="PackedScene" uid="uid://bgoddnn0j6yev" path="res://letters/menu_letter.tscn" id="12_7hcn2"]
[ext_resource type="Texture2D" uid="uid://ccn11k5e1l15f" path="res://resources/buttons/menu/menuPressed_2.png" id="12_hcknt"]
[ext_resource type="FontFile" uid="uid://cfachjkk2umhy" path="res://resources/fonts/Helvetica Black Condensed.otf" id="13_ppn8r"]
[ext_resource type="Texture2D" uid="uid://cnsg578c6nbsk" path="res://resources/buttons/menu/menu_6.png" id="16_t3v2g"]
[ext_resource type="Texture2D" uid="uid://ctiarsh4a61cb" path="res://resources/buttons/menu/menuPressed_6.png" id="17_kamdl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g1243"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j8wqy")
}, {
"duration": 1.0,
"texture": ExtResource("2_8nqu4")
}, {
"duration": 1.0,
"texture": ExtResource("3_b25dq")
}, {
"duration": 1.0,
"texture": ExtResource("4_4m60j")
}, {
"duration": 1.0,
"texture": ExtResource("5_7aup1")
}, {
"duration": 1.0,
"texture": ExtResource("6_xg8om")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="menu" type="Node2D"]
script = ExtResource("1_b2vu8")

[node name="background" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g1243")

[node name="backround_particles" type="CPUParticles2D" parent="."]
amount = 126
emission_shape = 3
emission_rect_extents = Vector2(260, 160)
gravity = Vector2(0, 0)
scale_amount_min = 128.0
scale_amount_max = 128.0
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="menu" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = -156.0
offset_right = 157.0
offset_bottom = -95.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_ss07b")
texture_pressed = ExtResource("8_4ah6i")

[node name="Label" type="Label" parent="menu"]
layout_mode = 0
offset_left = 18.6667
offset_top = 20.0
offset_right = 119.667
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "PLAY"
horizontal_alignment = 1

[node name="settings" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = -51.0
offset_right = 157.0
offset_bottom = 10.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("11_tytk6")
texture_pressed = ExtResource("12_hcknt")

[node name="Label" type="Label" parent="settings"]
layout_mode = 0
offset_left = 17.3333
offset_top = 23.3333
offset_right = 118.334
offset_bottom = 53.3333
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "SETTINGS"
horizontal_alignment = 1

[node name="refresh_menu" type="TextureButton" parent="."]
offset_left = -254.0
offset_top = -118.0
offset_right = -192.0
offset_bottom = -57.0
texture_normal = ExtResource("9_r8id6")
texture_pressed = ExtResource("10_e67pu")

[node name="refresh_stats" type="Label" parent="refresh_menu"]
layout_mode = 0
offset_left = 26.0
offset_top = 13.0
offset_right = 36.0
offset_bottom = 39.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0.2, 0.160784, 0.137255, 1)
text = "9"
horizontal_alignment = 1

[node name="rereoll_label" type="Label" parent="refresh_menu"]
layout_mode = 0
offset_left = -16.0
offset_top = -23.0
offset_right = 95.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
theme_override_font_sizes/font_size = 20
text = "re-roll letters"
horizontal_alignment = 1

[node name="rereoll_label2" type="Label" parent="refresh_menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 16.0
offset_right = 178.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "<- Max shop stats"
horizontal_alignment = 1

[node name="rereoll_label3" type="Label" parent="refresh_menu"]
layout_mode = 0
offset_left = 65.0
offset_top = 35.0
offset_right = 216.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "each roll removes 1"
horizontal_alignment = 1

[node name="letter_areas" type="Node2D" parent="."]
position = Vector2(25, -77)

[node name="mark_0" type="Marker2D" parent="letter_areas"]
position = Vector2(-262, 80)

[node name="menu_letter" parent="letter_areas/mark_0" instance=ExtResource("12_7hcn2")]

[node name="mark_1" type="Marker2D" parent="letter_areas"]
position = Vector2(-206, 80)

[node name="menu_letter" parent="letter_areas/mark_1" instance=ExtResource("12_7hcn2")]

[node name="mark_2" type="Marker2D" parent="letter_areas"]
position = Vector2(-146, 80)

[node name="menu_letter" parent="letter_areas/mark_2" instance=ExtResource("12_7hcn2")]

[node name="rereoll_label" type="Label" parent="."]
offset_left = -272.0
offset_top = 25.0
offset_right = -77.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
theme_override_font_sizes/font_size = 21
text = "form words 
on top row
 to battle"
horizontal_alignment = 1

[node name="menu2" type="TextureButton" parent="."]
offset_left = -230.0
offset_top = 101.0
offset_right = -93.0
offset_bottom = 162.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("11_tytk6")
texture_pressed = ExtResource("12_hcknt")

[node name="Label" type="Label" parent="menu2"]
layout_mode = 0
offset_left = 6.24996
offset_top = 12.5
offset_right = 131.25
offset_bottom = 64.5
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "CLICK HERE 
FOR MORE INFO"
horizontal_alignment = 1

[node name="reset" type="TextureButton" parent="."]
modulate = Color(0.45098, 0.156863, 0.12549, 1)
offset_left = 38.0
offset_top = 76.0
offset_right = 175.0
offset_bottom = 137.0
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("16_t3v2g")
texture_pressed = ExtResource("17_kamdl")

[node name="Label" type="Label" parent="."]
offset_left = 59.0
offset_top = 100.0
offset_right = 184.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("13_ppn8r")
text = "RESET BOARD
(if bugged)"
horizontal_alignment = 1

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="refresh_menu" to="." method="_on_refresh_menu_pressed"]
[connection signal="pressed" from="menu2" to="." method="_on_menu_2_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
